--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
                             </ul>
                             <img src="images/portraits/item__images1.png" alt="" class="portraits-item__images1">
                             <h4 class="portraits-item__subtitle">
-                                Любители
-                                путешествий
+                                Любители <br> путешествий
                             </h4>
                             <p class="portraits-item__text">
                                 ГЕО: территория РФ,
