--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             </ul>
                             <img src="images/portraits/item__images1.png" alt="" class="portraits-item__images1">
                             <h4 class="portraits-item__subtitle">
-                                Городские пижоны
+                                Городские <br> пижоны
                             </h4>
                             <p class="portraits-item__text">
                                 ГЕО: Москва, Санкт-Петербург, крупные города Юга РФ.
@@ -148,7 +148,7 @@
                             </ul>
                             <img src="images/portraits/item__images1.png" alt="" class="portraits-item__images1">
                             <h4 class="portraits-item__subtitle">
-                                Ценители
+                                Ценители <br>
                                 комфорта
                             </h4>
                             <p class="portraits-item__text">
