--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="result__content content-reuslt">
+                <div class="result__content ">
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Показы</h4>
                         <img src="images/result/58.svg" alt="" class="impressions">
@@ -274,7 +274,7 @@
                     Тестовое размещение Nectarin DATA доказало свою эффективность: количество кликов превысило план на
                     <span>18%</span>.
                 </p>
-                <div class="result__content content-reuslt">
+                <div class="result__content">
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Показы</h4>
                         <img src="images/result/0.44.svg" alt="" class="impressions">
