--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="user-scalable=0, initial-scale=1.0">
     <title>YOKOHAMA</title>
-    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick1.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -37,7 +37,7 @@
                 <div class="tasks__company">
                     <h2 class="title">Задачи рекламной кампании</h2>
                     <p class="tasks__text text">
-                        Максимальныйе охват целевой аудитории, количество уникальных просмотров видео и показов баннеров
+                        Максимальный охват целевой аудитории, количество уникальных просмотров видео и показов баннеров
                         при сбалансированном сплите каналов.
                     </p>
                 </div>
@@ -64,7 +64,7 @@
                     </p>
                     <div class="portraits__content">
                         <div class="portraits__content-item portraits-item">
-                            <img class="potraits-item__rubber1" src="images/portraits/rubber1.png" alt="">
+                            <img class="potraits-item__rubber" src="images/portraits/rubber1.png" alt="">
                             <h3 class="portraits-item__title">
                                 IceGUARD IG60
                             </h3>
@@ -93,11 +93,11 @@
                                 Владельцы автомобилей D,E,F классов не старше 5 лет. Ценят автомобиль не как средство
                                 передвижения, но как демонстрацию уровня дохода и статуса. Не экономят на расходниках,
                                 ищут
-                                оптимальное соотношение цена-качество.
+                                оптимальное соотношение "цена-качество".
                             </p>
                         </div>
                         <div class="portraits__content-item portraits-item">
-                            <img class="potraits-item__rubber2" src="images/portraits/rubber2.png" alt="">
+                            <img class="potraits-item__rubber" src="images/portraits/rubber2.png" alt="">
                             <h3 class="portraits-item__title">
                                 IceGUARD Stud IG65
                             </h3>
@@ -128,7 +128,7 @@
                             </p>
                         </div>
                         <div class="portraits__content-item portraits-item">
-                            <img class="potraits-item__rubber3" src="images/portraits/rubber3.png" alt="">
+                            <img class="potraits-item__rubber" src="images/portraits/rubber3.png" alt="">
                             <h3 class="portraits-item__title">
                                 IceGUARD Studless G075
                             </h3>
@@ -386,8 +386,6 @@
 
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.min.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
