--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <h1 class="header__title">
                     Использование digital-инструментов
-                    при продвижении шин
+                    при продвижении автомобильных шин
                 </h1>
             </div>
             <div class="header__tasks">
@@ -30,21 +30,20 @@
                     <p class="tasks__text text">
                         Привлечение внимания
                         к бренду Yokohama
-                        в преддверии зимнего сезона – повышение узнаваемости
-                        и лояльности.
+                        в преддверии зимнего сезона – повысить узнаваемость.
                     </p>
                 </div>
                 <div class="tasks__company">
                     <h2 class="title">Задачи рекламной кампании</h2>
                     <p class="tasks__text text">
-                        Максимальный охват целевой аудитории, количество уникальных просмотров видео и показов баннеров
+                        Максимизировать охват целевой аудитории, количество уникальных просмотров видео и показов баннеров
                         при сбалансированном сплите каналов.
                     </p>
                 </div>
                 <div class="tasks__auditory">
                     <h2 class="title">Целевая аудитория </h2>
                     <p class="tasks__text text">
-                        Социально-демографические характеристики ЦА:
+                        Социально-демографические характеристики:
                         автовладельцы в возрасте 25-55 лет с уровнем дохода выше среднего.
                     </p>
                 </div>
@@ -56,8 +55,7 @@
             <div class="container">
                 <div class="portraits__inner">
                     <p class="portraits__text">
-                        Сегментация целевой аудитории основана на типе продвигаемого продукта. Таким образом, в
-                        зависимости
+                        Сегментация целевой аудитории основана на типе продвигаемого продукта -  в зависимости
                         от функциональных характеристик и ценового сегмента шин были определены портреты автовладельцев,
                         на
                         которых была нацелена кампания:
@@ -174,8 +172,7 @@
                         <p class="decision__text text">
                             В основу кампании была заложена сегментация аудитории по типу продукта. Таким образом, для
                             охвата каждого сегмента был подобран набор наиболее релевантных инструментов и форматов, а
-                            также
-                            – таргетингов с использованием 3rd party data.
+                            также таргетингов с использованием 3rd party data.
                         </p>
                     </div>
                     <div class="decision__why-offer">
@@ -192,7 +189,7 @@
                             Особенности этого решения
                         </h2>
                         <p class="decision__text text">
-                            Главной особенностью продвижения было использование собственной Nectarin DATA, которая
+                            Главной особенностью продвижения было использование собственного сервиса Nectarin DATA, которая
                             позволила выстроить таргетинги на уникальные аудитории – людей, которые недавно купили
                             летние шины и активных покупателей в категории. Размещение происходило на внутренних
                             страницах сайтов-партнеров Google с помощью технологии look-alike.
