--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </p>
                     <div class="portraits__content">
                         <div class="portraits__content-item portraits-item">
-                            <img class="potraits-item__rubber" src="images/portraits/rubber1.png" alt="">
+                            <img class="potraits-item__rubber" src="images/portraits/rubber1.png" alt=" IceGUARD IG60">
                             <h3 class="portraits-item__title">
                                 IceGUARD IG60
                             </h3>
@@ -80,7 +80,7 @@
                                     Экономичные
                                 </li>
                             </ul>
-                            <img src="images/portraits/item__images1.png" alt="" class="portraits-item__images1">
+                            <img src="images/portraits/item__images1.png" alt="IceGUARD IG60" class="portraits-item__images1">
                             <h4 class="portraits-item__subtitle">
                                 Городские <br> пижоны
                             </h4>
@@ -95,7 +95,7 @@
                             </p>
                         </div>
                         <div class="portraits__content-item portraits-item">
-                            <img class="potraits-item__rubber" src="images/portraits/rubber2.png" alt="">
+                            <img class="potraits-item__rubber" src="images/portraits/rubber2.png" alt=" IceGUARD Stud IG65">
                             <h3 class="portraits-item__title">
                                 IceGUARD Stud IG65
                             </h3>
@@ -110,7 +110,7 @@
                                     Шипованные;
                                 </li>
                             </ul>
-                            <img src="images/portraits/item__images1.png" alt="" class="portraits-item__images1">
+                            <img src="images/portraits/item__images1.png" alt=" IceGUARD Stud IG65" class="portraits-item__images1">
                             <h4 class="portraits-item__subtitle">
                                 Любители <br> путешествий
                             </h4>
@@ -126,7 +126,7 @@
                             </p>
                         </div>
                         <div class="portraits__content-item portraits-item">
-                            <img class="potraits-item__rubber" src="images/portraits/rubber3.png" alt="">
+                            <img class="potraits-item__rubber" src="images/portraits/rubber3.png" alt=" IceGUARD Studless G075">
                             <h3 class="portraits-item__title">
                                 IceGUARD Studless G075
                             </h3>
@@ -144,7 +144,7 @@
                                     Забота об экологии
                                 </li>
                             </ul>
-                            <img src="images/portraits/item__images1.png" alt="" class="portraits-item__images1">
+                            <img src="images/portraits/item__images1.png" alt=" IceGUARD Studless G075" class="portraits-item__images1">
                             <h4 class="portraits-item__subtitle">
                                 Ценители <br>
                                 комфорта
@@ -244,25 +244,25 @@
                 <div class="result__content ">
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Показы</h4>
-                        <img src="images/result/58.svg" alt="" class="impressions">
+                        <img src="images/result/58.svg" alt="График" class="impressions">
                         <p class="content-reuslt__plan">План – 42 546 825;</p>
                         <p class="content-reuslt__fact">Факт – 67 291 051</p>
                     </div>
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Охват</h4>
-                        <img src="images/result/83.svg" alt="" class="impressions">
+                        <img src="images/result/83.svg" alt="График" class="impressions">
                         <p class="content-reuslt__plan">План – 15 041 516;</p>
                         <p class="content-reuslt__fact">Факт – 27 630 819</p>
                     </div>
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Клики</h4>
-                        <img src="images/result/74.svg" alt="" class="impressions">
+                        <img src="images/result/74.svg" alt="График" class="impressions">
                         <p class="content-reuslt__plan">План – 115 985;</p>
                         <p class="content-reuslt__fact">Факт – 201 328</p>
                     </div>
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Просмотры</h4>
-                        <img src="images/result/69.svg" alt="" class="impressions">
+                        <img src="images/result/69.svg" alt="График" class="impressions">
                         <p class="content-reuslt__plan">План – 17 876 004;</p>
                         <p class="content-reuslt__fact">Факт – 30 300 320</p>
                     </div>
@@ -274,25 +274,25 @@
                 <div class="result__content">
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Показы</h4>
-                        <img src="images/result/0.44.svg" alt="" class="impressions">
+                        <img src="images/result/0.44.svg" alt="График" class="impressions">
                         <p class="content-reuslt__plan">План – 500 000;</p>
                         <p class="content-reuslt__fact">Факт – 502 209</p>
                     </div>
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Охват</h4>
-                        <img src="images/result/5.svg" alt="" class="impressions">
+                        <img src="images/result/5.svg" alt="График" class="impressions">
                         <p class="content-reuslt__plan">План – 217 391;</p>
                         <p class="content-reuslt__fact">Факт – 228 174</p>
                     </div>
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Клики</h4>
-                        <img src="images/result/0.02.svg" alt="" class="impressions">
+                        <img src="images/result/0.02.svg" alt="График" class="impressions">
                         <p class="content-reuslt__plan">План – 0,10%;</p>
                         <p class="content-reuslt__fact">Факт – 0,12%</p>
                     </div>
                     <div class="content-reuslt">
                         <h4 class="content-reuslt__title">Просмотры</h4>
-                        <img src="images/result/18.svg" alt="" class="impressions">
+                        <img src="images/result/18.svg" alt="График" class="impressions">
                         <p class="content-reuslt__plan">План – 500;</p>
                         <p class="content-reuslt__fact">Факт – 588</p>
                     </div>
@@ -334,7 +334,7 @@
                             Инна Черепанина, аккаунт-менеджер.
                         </p>
                     </div>
-                    <img src="images/opinion/opinion_img.jpg" alt="" class="opinion__img">
+                    <img src="images/opinion/opinion_img.jpg" alt="Инна Черепанина" class="opinion__img">
                 </div>
             </div>
         </section>
@@ -347,29 +347,29 @@
                 </h2>
                 <div class="footer__content">
                     <div class="footer__content-item">
-                        <img src="images/footer/footer_img1.png" alt="" class="footer__content-img">
+                        <img src="images/footer/footer_img1.png" alt="Евгений Сергеев" class="footer__content-img">
                         <p class="footer__content-text">
                             <span>Евгений Сергеев</span> <br>
                             аккаунт-директор
                         </p>
                     </div>
                     <div class="footer__content-item">
-                        <img src="images/footer/footer_img2.png" alt="" class="footer__content-img">
+                        <img src="images/footer/footer_img2.png" alt="Инна Черепанина" class="footer__content-img">
                         <p class="footer__content-text">
                             <span>Инна Черепанина</span> <br>
                             аккаунт-менеджер
                         </p>
                     </div>
                     <div class="footer__content-item">
-                        <img src="images/footer/footer_img3.png" alt="" class="footer__content-img">
+                        <img src="images/footer/footer_img3.png" alt="Таисия Стенькина" class="footer__content-img">
                         <p class="footer__content-text">
-                            <span> Таисия Стенькина</span> <br>
+                            <span>Таисия Стенькина</span> <br>
                             специалист отдела
                             <br> медиапланирования
                         </p>
                     </div>
                     <div class="footer__content-item">
-                        <img src="images/footer/footer_img4.png" alt="" class="footer__content-img">
+                        <img src="images/footer/footer_img4.png" alt="Валерия Шукшина" class="footer__content-img">
                         <p class="footer__content-text">
                             <span>Валерия Шукшина</span> <br>
                             руководитель отдела <br> контекстной рекламы
