--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <div class="tasks__company">
                     <h2 class="title">Задачи рекламной кампании</h2>
                     <p class="tasks__text text">
-                        Максимизировать охват целевой аудитории, количество уникальных просмотров видео и показов баннеров
+                        Максимизировать охват целевой аудитории, количество уникальных просмотров видео и показов
+                        баннеров
                         при сбалансированном сплите каналов.
                     </p>
                 </div>
@@ -55,7 +56,7 @@
             <div class="container">
                 <div class="portraits__inner">
                     <p class="portraits__text">
-                        Сегментация целевой аудитории основана на типе продвигаемого продукта -  в зависимости
+                        Сегментация целевой аудитории основана на типе продвигаемого продукта - в зависимости
                         от функциональных характеристик и ценового сегмента шин были определены портреты автовладельцев,
                         на
                         которых была нацелена кампания:
@@ -80,7 +81,8 @@
                                     Экономичные
                                 </li>
                             </ul>
-                            <img src="images/portraits/item__images1.png" alt="IceGUARD IG60" class="portraits-item__images1">
+                            <img src="images/portraits/item__images1.png" alt="IceGUARD IG60"
+                                class="portraits-item__images1">
                             <h4 class="portraits-item__subtitle">
                                 Городские <br> пижоны
                             </h4>
@@ -95,7 +97,8 @@
                             </p>
                         </div>
                         <div class="portraits__content-item portraits-item">
-                            <img class="potraits-item__rubber" src="images/portraits/rubber2.png" alt=" IceGUARD Stud IG65">
+                            <img class="potraits-item__rubber" src="images/portraits/rubber2.png"
+                                alt=" IceGUARD Stud IG65">
                             <h3 class="portraits-item__title">
                                 IceGUARD Stud IG65
                             </h3>
@@ -110,7 +113,8 @@
                                     Шипованные;
                                 </li>
                             </ul>
-                            <img src="images/portraits/item__images1.png" alt=" IceGUARD Stud IG65" class="portraits-item__images1">
+                            <img src="images/portraits/item__images1.png" alt=" IceGUARD Stud IG65"
+                                class="portraits-item__images1">
                             <h4 class="portraits-item__subtitle">
                                 Любители <br> путешествий
                             </h4>
@@ -126,7 +130,8 @@
                             </p>
                         </div>
                         <div class="portraits__content-item portraits-item">
-                            <img class="potraits-item__rubber" src="images/portraits/rubber3.png" alt=" IceGUARD Studless G075">
+                            <img class="potraits-item__rubber" src="images/portraits/rubber3.png"
+                                alt=" IceGUARD Studless G075">
                             <h3 class="portraits-item__title">
                                 IceGUARD Studless G075
                             </h3>
@@ -144,7 +149,8 @@
                                     Забота об экологии
                                 </li>
                             </ul>
-                            <img src="images/portraits/item__images1.png" alt=" IceGUARD Studless G075" class="portraits-item__images1">
+                            <img src="images/portraits/item__images1.png" alt=" IceGUARD Studless G075"
+                                class="portraits-item__images1">
                             <h4 class="portraits-item__subtitle">
                                 Ценители <br>
                                 комфорта
@@ -189,7 +195,8 @@
                             Особенности этого решения
                         </h2>
                         <p class="decision__text text">
-                            Главной особенностью продвижения было использование собственного сервиса Nectarin DATA, которая
+                            Главной особенностью продвижения было использование собственного сервиса Nectarin DATA,
+                            которая
                             позволила выстроить таргетинги на уникальные аудитории – людей, которые недавно купили
                             летние шины и активных покупателей в категории. Размещение происходило на внутренних
                             страницах сайтов-партнеров Google с помощью технологии look-alike.
@@ -210,13 +217,19 @@
                     </p>
                     <div class="slider">
                         <div class="slider__item">
-                            <img src="images/examples/examples.jpg" alt="Пример" class="slider__item-img">
+                            <a class="slider__item-link" href="">
+                                <img src="images/examples/examples1.png" alt="Пример" class="slider__item-img">
+                            </a>
                         </div>
                         <div class="slider__item">
-                            <img src="images/examples/examples.jpg" alt="Пример" class="slider__item-img">
+                            <a class="slider__item-link" href="">
+                                <img src="images/examples/examples2.png" alt="Пример" class="slider__item-img">
+                            </a>
                         </div>
                         <div class="slider__item">
-                            <img src="images/examples/examples.jpg" alt="Пример" class="slider__item-img">
+                            <a class="slider__item-link" href="">
+                                <img src="images/examples/examples3.png" alt="Пример" class="slider__item-img">
+                            </a>
                         </div>
                     </div>
                 </div>
